[gd_scene load_steps=15 format=3 uid="uid://badcm6unmfp41"]

[ext_resource type="Script" path="res://examples/scenes/common/story_player.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dgr3p2yr23j6g" path="res://examples/fonts/Poppins-Medium.ttf" id="2"]
[ext_resource type="Texture2D" uid="uid://y67ay27gvf0f" path="res://examples/images/spinner.png" id="4"]
[ext_resource type="Texture2D" uid="uid://1rrpgplbcgqn" path="res://examples/images/transparent.png" id="5"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.145098, 0.145098, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.270588, 0.270588, 0.270588, 1)

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="5"]

[sub_resource type="Theme" id="6"]
VScrollBar/icons/decrement = ExtResource("5")
VScrollBar/icons/decrement_highlight = ExtResource("5")
VScrollBar/icons/increment = ExtResource("5")
VScrollBar/icons/increment_highlight = ExtResource("5")
VScrollBar/styles/grabber = SubResource("1")
VScrollBar/styles/grabber_highlight = SubResource("2")
VScrollBar/styles/grabber_pressed = SubResource("3")
VScrollBar/styles/scroll = SubResource("4")
VScrollBar/styles/scroll_focus = SubResource("5")

[sub_resource type="Animation" id="7"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LoadingAnimationPlayer/CenterContainer/VBoxContainer/CenterContainer/SpinnerTextureRect:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 360.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jbitm"]
_data = {
"LoadingAnimation": SubResource("7")
}

[sub_resource type="FontFile" id="9"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Theme" id="8"]
Label/colors/font_color = Color(0, 0, 0, 1)
Label/fonts/font = SubResource("9")

[node name="StoryPlayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")
bind_externals = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.929412, 0.898039, 0.854902, 1)

[node name="StoryMarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 40

[node name="StoryScrollContainer" type="ScrollContainer" parent="StoryMarginContainer"]
layout_mode = 2
theme = SubResource("6")
horizontal_scroll_mode = 0

[node name="StoryVBoxContainer" type="VBoxContainer" parent="StoryMarginContainer/StoryScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -113.0

[node name="LoadingAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "LoadingAnimation"
libraries = {
"": SubResource("AnimationLibrary_jbitm")
}

[node name="CenterContainer" type="CenterContainer" parent="LoadingAnimationPlayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingAnimationPlayer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TitleLabel" type="Label" parent="LoadingAnimationPlayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("8")
text = "The Intercept"

[node name="CenterContainer" type="CenterContainer" parent="LoadingAnimationPlayer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SpinnerTextureRect" type="TextureRect" parent="LoadingAnimationPlayer/CenterContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("4")
stretch_mode = 4
